--- a/#source/scss/popups.scss
+++ b/#source/scss/popups.scss
@@ -635,5 +635,159 @@
         margin-bottom: 20px;
     }
 
-    
+
 }
+
+// Add position
+
+.addposition__search {
+    margin-bottom: 35px;
+
+    .searchblock {
+        width: 100%;
+        max-width: 100%;
+    }
+}
+
+.addposition__products {
+    min-height: 380px;
+    margin-bottom: 20px;
+}
+
+.addposition__product {
+    margin-bottom: 20px;
+
+    label {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        cursor: pointer;
+
+        .addposition__product-check {
+            width: 100%;
+            max-width: 40px;
+            flex: 0 0 40px;
+
+            span {
+                width: 20px;
+                height: 20px;
+                display: inline-block;
+                border: 1px solid #3B454C;
+                border-radius: 2px;
+            }
+        }
+
+        .addposition__product-img {
+            width: 100%;
+            max-width: 83px;
+            flex: 0 0 83px;
+
+            .imgwrap {
+                height: 92px;
+                overflow: hidden;
+                border-radius: 5px;
+                position: relative;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: 50% 50%;
+                }
+            }
+        }
+
+        .addposition__product-descr {
+            width: 100%;
+            max-width: calc(100% - 123px);
+            flex: 0 0 calc(100% - 123px);
+            padding-left: 40px;
+
+            p {
+                color: #6A747B;
+                font-size: 14px;
+                margin: 0;
+                font-weight: 400;
+            }
+
+            p.title {
+                margin-bottom: 10px;
+                color: #3B454D;
+                font-size: 16px;
+            }
+        }
+    }
+
+    input {
+        display: none;
+
+        &:checked {
+            &+label {
+                .addposition__product-check {
+
+                    span {
+                        border: 1px solid $base-green;
+                        background-color: $base-green;
+                        background-image: url(../img/selleracc/white-check.svg);
+                        background-repeat: no-repeat;
+                        background-position: center;
+                        background-size: 14px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.productdetails.addposition {
+    .greenbtn {
+        max-width: 250px;
+        min-height: 60px;
+        font-size: 18px;
+    }
+}
+
+@media(max-width:1199.8px) {
+
+    .addposition__products {
+        min-height: 300px;
+    }
+
+    #addposition.generalmodal .modal-dialog {
+        max-width: 500px;
+    }
+
+}
+
+@media(max-width:575.8px) {
+    .addposition__product label .addposition__product-check {
+        max-width: 30px;
+        flex: 0 0 30px;
+    }
+
+    .addposition__product label .addposition__product-img {
+        max-width: 70px;
+        flex: 0 0 70px;
+    }
+
+    .addposition__product label .addposition__product-descr {
+        max-width: calc(100% - 100px);
+        flex: 0 0 calc(100% - 100px);
+        padding-left: 20px;
+    }
+
+    .productdetails.addposition .greenbtn {
+        max-width: 100%;
+    }
+
+    .addposition__products {
+        min-height: initial;
+        margin-bottom: 30px;
+    }
+
+    .addposition__product label .addposition__product-descr p.title {
+        font-size: 15px;
+    }
+
+}
+
