--- a/#source/scss/admin.scss
+++ b/#source/scss/admin.scss
@@ -19,7 +19,6 @@
     }
 }
 
-
 .adminpage.hidemenu {
 
     .asminsidebar {
@@ -847,8 +846,581 @@
 
 }
 
-@media(max-width:360.8.8px) {
+@media(max-width:360.8px) {
     .admincontent__userdd {
         width: 290px;
     }
+}
+
+// USER PROFILE
+.admininfosect__rightboxlist {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 35px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+
+        a {
+            color: $bace-color;
+            font-size: 14px;
+            font-weight: 500;
+            line-height: 160%;
+            padding-bottom: 4px;
+        }
+
+        &.active {
+            a {
+                color: $base-green;
+                border-bottom: 4px solid $base-green;
+            }
+        }
+    }
+
+}
+
+.admininfosect__body.p0 {
+    padding: 0;
+}
+
+.admininfosect__body.flex {
+    flex-wrap: wrap;
+}
+
+.admininfosect__userleft {
+    width: 100%;
+    max-width: 310px;
+    flex: 0 0 310px;
+    border-right: 1px solid #D9DBDF;
+}
+
+.admininfosect__userright {
+    width: 100%;
+    max-width: calc(100% - 310px);
+    flex: 0 0 calc(100% - 310px);
+}
+
+.admininfosect__usercontinfo {
+    padding: 35px 45px 30px 45px;
+    border-bottom: 1px solid #D9DBDF;
+
+    .imgwrap {
+        position: relative;
+        overflow: hidden;
+        width: 80px;
+        height: 80px;
+        border-radius: 50%;
+        margin: 0 auto 10px;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 50% 50%;
+        }
+    }
+
+    .name {
+        margin: 0;
+        color: $bace-color;
+        font-size: 15px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    .email {
+        margin-bottom: 20px;
+        color: #3B454C;
+        font-size: 15px;
+        text-align: center;
+    }
+
+    .greenbtn {
+        min-height: 45px;
+        font-size: 15px;
+        margin-bottom: 15px;
+    }
+
+    .bordergreenbtn {
+        min-height: 45px;
+        font-size: 15px;
+    }
+}
+
+.admininfosect__userleft .contactbox {
+    padding: 30px 45px;
+
+    .title {
+        color: $bace-color;
+        margin-bottom: 15px;
+        font-size: 17px;
+        font-weight: 500;
+        text-transform: capitalize;
+    }
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+
+        li {
+            margin-bottom: 20px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            p {
+                color: #3B454D;
+                font-size: 14px;
+                font-weight: 500;
+                margin-bottom: 5px;
+            }
+
+            a {
+                color: #3B454C;
+                font-size: 14px;
+
+                &:hover {
+                    color: $base-green;
+                }
+            }
+
+            span {
+                color: #3B454C;
+                font-size: 14px;
+                display: block;
+            }
+        }
+    }
+
+}
+
+.admininfosect__userrightwrap {
+    padding: 37px 26px;
+
+    .infosect {
+        margin-bottom: 45px;
+    }
+}
+
+.uplinbox {
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    min-height: 88px;
+
+    .imgwrap {
+        width: 100%;
+        max-width: 55px;
+        flex: 0 0 55px;
+
+        img {
+            max-width: 100%;
+        }
+    }
+
+    .textwrap {
+        width: 100%;
+        max-width: calc(100% - 55px);
+        flex: 0 0 calc(100% - 55px);
+        padding-left: 15px;
+
+        p {
+            margin: 0;
+            color: #3B454C;
+            font-size: 16px;
+            font-weight: 500;
+
+            span {
+                display: block;
+            }
+        }
+    }
+}
+
+.creditcardssect {
+    margin-bottom: 45px;
+
+    .crcbox {
+        display: flex;
+        align-items: center;
+        padding: 15px;
+        border-radius: 10px;
+        background: #FFF;
+        box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+        min-height: 76px;
+
+        .imgwrap {
+            width: 100%;
+            max-width: 58px;
+            flex: 0 0 58px;
+            height: 36px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0px 1.8px 6px rgba(0, 0, 0, 0.03);
+
+            img {
+                max-width: 100%;
+            }
+        }
+
+        .textwrap {
+            padding-left: 15px;
+            width: 100%;
+            max-width: calc(100% - 58px);
+            flex: 0 0 calc(100% - 58px);
+
+            p {
+                margin: 0;
+                color: $bace-color;
+                font-size: 17px;
+                font-weight: 500;
+            }
+        }
+    }
+}
+
+.userproftitle {
+    margin-bottom: 20px;
+    color: $bace-color;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.latestnotification {
+    margin-bottom: 45px;
+}
+
+.latestnotification__box {
+    padding: 25px;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+}
+
+.latestnotification__row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+
+    .latestnotification__imgwrap {
+        width: 100%;
+        max-width: 55px;
+        flex: 0 0 55px;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    .latestnotification__descr {
+        width: 100%;
+        max-width: calc(100% - 155px);
+        flex: 0 0 calc(100% - 155px);
+        padding-left: 16px;
+
+        .title {
+            margin-bottom: 5px;
+            color: #3B454C;
+            font-size: 16px;
+            font-weight: 500;
+        }
+
+        .descr {
+            margin: 0;
+            color: #3B454C;
+            font-size: 14px;
+        }
+    }
+
+    .latestnotification__time {
+        width: 100%;
+        max-width: 100px;
+        flex: 0 0 100px;
+        text-align: right;
+
+        p {
+            color: #179D79;
+            font-size: 14px;
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+
+            img {
+                vertical-align: middle;
+                margin-right: 6px;
+            }
+        }
+    }
+}
+
+.recentorders__head {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+
+    .userproftitle {
+        width: 100%;
+        max-width: 60%;
+        flex: 0 0 60%;
+        margin: 0;
+    }
+
+    .dateselect {
+        width: 100%;
+        max-width: 40%;
+        flex: 0 0 40%;
+        text-align: right;
+
+        .select2-container .select2-selection--single .select2-selection__rendered {
+            text-align: left;
+        }
+
+        .select2-container--default .select2-selection--single {
+            border: none;
+        }
+
+        .select2-container {
+            max-width: 200px;
+            width: 100% !important;
+        }
+
+        .select2-container--default .select2-selection--single .select2-selection__arrow {
+            background: url(../img/header/select-arrow.svg) no-repeat center center/16px;
+            top: 0;
+            right: 15px;
+            transition: 0.3s;
+
+            b {
+                display: none;
+            }
+        }
+    }
+
+}
+
+.recentorders__body {
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    padding: 25px;
+
+    table {
+        width: 100%;
+
+        .recentorders__id {
+            width: 100px;
+        }
+
+        .recentorders__prname {
+            width: calc(100% - 534px);
+        }
+
+        .recentorders__units {
+            width: 92px;
+        }
+
+        .recentorders__orddate {
+            width: 132px;
+        }
+
+        .recentorders__ordcost {
+            width: 100px;
+        }
+
+        .recentorders__status {
+            width: 110px;
+
+            span {
+                display: block;
+                text-align: center;
+                color: #fff;
+                font-size: 13px;
+                font-weight: 600;
+                line-height: 110%;
+                padding: 6px 5px;
+                border-radius: 99px;
+            }
+        }
+
+        thead {
+            th {
+                color: #3B454C;
+                font-size: 14px;
+                font-weight: 600;
+                line-height: 110%;
+                padding-bottom: 16px;
+            }
+        }
+
+        tbody {
+            td {
+                padding: 19px 5px 19px 0;
+                color: #3B454C;
+                font-size: 15px;
+            }
+        }
+    }
+}
+
+@media(max-width:1400.8px) {
+
+    .admininfosect__userleft {
+        max-width: 250px;
+        flex: 0 0 250px;
+    }
+
+    .admininfosect__userright {
+        max-width: calc(100% - 250px);
+        flex: 0 0 calc(100% - 250px);
+    }
+
+    .admininfosect__usercontinfo {
+        padding: 25px 20px 20px 20px;
+        border-bottom: 1px solid #D9DBDF;
+    }
+
+    .admininfosect__usercontinfo .bordergreenbtn,
+    .admininfosect__usercontinfo .greenbtn {
+        font-size: 14px;
+    }
+
+}
+
+@media(max-width:1399.8px) {
+
+    .uplinbox,
+    .creditcardssect .crcbox {
+        margin-bottom: 15px;
+    }
+
+    .admininfosect__userleft .contactbox {
+        padding: 20px;
+    }
+
+    .recentorders__body table .recentorders__prname {
+        padding-right: 10px;
+    }
+
+    .recentorders__body {
+        overflow: auto;
+
+        table {
+            width: 700px;
+        }
+    }
+}
+
+@media(max-width:991.8px) {
+
+    .admininfosect__userleft,
+    .admininfosect__userright {
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
+
+    .admininfosect__usercontinfo .bordergreenbtn {
+        max-width: 300px;
+        margin: 0 auto;
+    }
+
+    .admininfosect__usercontinfo .greenbtn {
+        max-width: 300px;
+        margin: 0 auto 10px;
+    }
+
+    .admininfosect__usercontinfo .name {
+        font-size: 18px;
+    }
+
+    .admininfosect__header {
+        flex-wrap: wrap;
+
+        .admininfosect__title,
+        .admininfosect__rightbox {
+            max-width: 100%;
+            flex: 0 0 100%;
+        }
+
+        .admininfosect__rightbox {
+            justify-content: flex-start;
+        }
+
+    }
+
+
+
+
+
+
+
+}
+
+@media(max-width:575.8px) {
+
+    .admininfosect__userleft .contactbox .title {
+        font-size: 18px;
+    }
+
+    .admininfosect__userleft .contactbox ul li p {
+        font-size: 16px;
+    }
+
+    .admininfosect__userleft .contactbox ul li a {
+        font-size: 15px;
+    }
+
+    .admininfosect__usercontinfo,
+    .admininfosect__userleft .contactbox,
+    .admininfosect__userrightwrap {
+        padding: 15px;
+    }
+
+    .latestnotification__row .latestnotification__time {
+        max-width: 75px;
+        flex: 0 0 75px;
+
+        p {
+            font-size: 12px;
+    
+            img {
+                width: 12px;
+                margin-right: 3px;
+            }
+        }
+    }
+
+    .latestnotification__row .latestnotification__imgwrap {
+        max-width: 45px;
+        flex: 0 0 45px;
+    }
+
+    .latestnotification__row .latestnotification__descr {
+        max-width: calc(100% - 120px);
+        flex: 0 0 calc(100% - 120px);
+    }
+
+    .latestnotification__row .latestnotification__descr .descr {
+        font-size: 12px;
+    }
+
+    .latestnotification__box,
+    .recentorders__body {
+        padding: 15px;
+    }
+
 }
