--- a/#source/scss/admin.scss
+++ b/#source/scss/admin.scss
@@ -411,7 +411,7 @@
 }
 
 .admininfosect__body {
-    padding: 20px 25px 25px 25px;
+    padding: 20px 25px 45px 25px;
 }
 
 .admininfosect__filtersect {
@@ -1607,4 +1607,392 @@
 
 .adminsettingssect__chooseblock {
     margin-bottom: 15px;
+}
+
+// Admin sellers 
+.admininfosect__filtersect.admininfosect__filtersect-switch {
+    .searchwrap {
+        max-width: calc(100% - 379px);
+        flex: 0 0 calc(100% - 379px);
+    }
+
+    .switchpage {
+        width: 100%;
+        max-width: 67px;
+        flex: 0 0 67px;
+        position: relative;
+        padding-left: 25px;
+
+        .switchpage__btn {
+            width: 42px;
+            height: 42px;
+            background: #FFF;
+            border-radius: 10px;
+            border: 1px solid #D9DBDF;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+
+            img {
+                max-width: 20px;
+            }
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            width: 167px;
+            background: #fff;
+            border: 1px solid #D9DBDF;
+            box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.06);
+            position: absolute;
+            right: 0;
+            top: calc(100% + 6px);
+            padding: 16px 12px;
+            display: none;
+            z-index: 3;
+
+            li {
+                margin-bottom: 20px;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+
+                a {
+                    color: #3B454D;
+                    font-size: 14px;
+                    font-weight: 500;
+                    text-transform: capitalize;
+                    transition: 0.3s;
+
+                    &:hover {
+                        color: $base-green;
+                    }
+                }
+            }
+
+        }
+    }
+
+
+
+}
+
+.sellerscard {
+    text-align: center;
+    position: relative;
+    background: #fff;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    border-radius: 10px;
+    padding: 40px 15px 35px;
+    overflow: hidden;
+    margin-bottom: 30px;
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 96px;
+        width: 100%;
+        background: #13B086;
+    }
+
+    &>* {
+        position: relative;
+        z-index: 2;
+    }
+
+    .admsellerimg {
+        width: 96px;
+        height: 96px;
+        overflow: hidden;
+        border-radius: 50%;
+        margin: 0 auto 10px;
+        border: 1px solid #FFF;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 50% 50%;
+        }
+    }
+
+    .admsellername {
+        color: $bace-color;
+        font-size: 14px;
+        font-weight: 600;
+        text-transform: capitalize;
+        margin-bottom: 10px;
+    }
+
+    .admsellerid {
+        color: #828282;
+        font-size: 12px;
+        line-height: 110%;
+        margin-bottom: 5px;
+
+        span {
+            font-weight: 600;
+            margin-right: 4px;
+        }
+    }
+
+    .admselleremail {
+        color: #828282;
+        font-size: 12px;
+        line-height: 110%;
+        display: inline-block;
+        margin-bottom: 25px;
+    }
+
+    .admsellerbtngroup {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        a {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            max-width: calc(50% - 5px);
+            flex: 0 0 calc(50% - 5px);
+            min-height: 32px;
+            border-radius: 40px;
+            font-size: 14px;
+            font-weight: 600;
+            transition: 0.3s;
+
+            img {
+                margin-right: 4px;
+                vertical-align: middle;
+                margin-top: -1px;
+            }
+
+
+            &.admsellerbtnedit {
+                border: 1px solid $base-green;
+                color: $base-green;
+
+                img {
+                    max-width: 11px;
+                }
+
+                &:hover {
+                    box-shadow: 0 4px 10px rgba(21, 132, 102, 0.3);
+                }
+            }
+
+            &.admsellerbtnremove {
+                border: 1px solid #C9273A;
+                color: #C9273A;
+
+                img {
+                    max-width: 13px;
+                }
+
+                &:hover {
+                    box-shadow: 0 4px 10px rgba(201, 39, 58, 0.3);
+                }
+            }
+        }
+    }
+
+
+}
+
+.sellerscardswrap .pagination {
+    margin-top: 30px;
+}
+
+@media(max-width:1399.8px) {
+
+    .sellerscard .admsellerbtngroup {
+        flex-wrap: wrap;
+
+        a {
+            max-width: 100%;
+            flex: 0 0 100%;
+
+            &.admsellerbtnedit {
+                margin-bottom: 10px;
+            }
+        }
+    }
+
+}
+
+@media(max-width:1199.8px) {
+
+    .sellerscard .admsellerbtngroup {
+
+        a {
+            max-width: calc(50% - 5px);
+            flex: 0 0 calc(50% - 5px);
+
+            &.admsellerbtnedit {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+}
+
+@media(max-width:991.8px) {
+    .admininfosect__filtersect.admininfosect__filtersect-switch {
+        .searchwrap {
+            max-width: 100%;
+            flex: 0 0 100%;
+        }
+
+        .showcount {
+            max-width: calc(100% - 187px);
+            flex: 0 0 calc(100% - 187px);
+        }
+
+    }
+
+}
+
+@media(max-width:850.8px) {
+    .sellerscard .admsellerbtngroup {
+        flex-wrap: wrap;
+
+        a {
+            max-width: 100%;
+            flex: 0 0 100%;
+
+            &.admsellerbtnedit {
+                margin-bottom: 10px;
+            }
+        }
+    }
+
+}
+
+@media(max-width:575.8px) {
+
+    .admininfosect__filtersect.admininfosect__filtersect-switch .showcount {
+        max-width: 100%;
+        flex: 0 0 100%;
+        margin-bottom: 15px;
+        padding-right: 0;
+    }
+
+    .admininfosect__filtersect .datebtn {
+        max-width: calc(100% - 67px);
+        flex: 0 0 calc(100% - 67px);
+    }
+
+
+
+}
+
+// list
+.sellertable {
+
+    .admsellerimg {
+        width: 90px;
+
+        .imgwrap {
+            width: 45px;
+            height: 45px;
+            overflow: hidden;
+            border-radius: 50%;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: 50% 50%;
+            }
+        }
+    }
+
+    .admsellername {
+        width: calc(50% - 350px);
+    }
+
+    .admsellerid {
+        width: 14%;
+    }
+
+    .admselleremail {
+        width: 22%;
+    }
+
+    .admsellerstatus {
+        width: 14%;
+
+        span {
+            color: #3B454C;
+            font-size: 13px;
+            font-weight: 500;
+            line-height: 110%;
+            padding: 5px 10px;
+            border-radius: 70px;
+        }
+    }
+
+    .admsellerbtngroup {
+        width: 260px;
+        padding-right: 0;
+
+        .btnswrapper {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+
+            a {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 100%;
+                max-width: 120px;
+                flex: 0 0 120px;
+                font-size: 14px;
+                font-weight: 500;
+                line-height: 110%;
+                border-radius: 35px;
+                min-height: 40px;
+                transition: 0.3s;
+
+                &.admsellerbtnedit {
+                    background: $base-green;
+                    color: #fff;
+
+                    img {
+                        width: 11px;
+                        margin-right: 5px;
+                    }
+
+                    &:hover {
+                        box-shadow: 0 4px 10px rgba(21,132,102,0.3);
+                    }
+                }
+
+                &.admsellerbtnremove {
+                    background: #fff;
+                    border: 1px solid #C9273A;
+                    color: #C9273A;
+
+                    img {
+                        width: 13px;
+                        margin-right: 5px;
+                    }
+
+                    &:hover {
+                        box-shadow: 0 4px 10px rgba(201,39,58,0.3);
+                    }
+                }
+            }
+
+        }
+    }
 }
